<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HomeWork</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="DialogBtnText">对话框测试</string>
    <string name="NormalDialogBtnText">普通对话框</string>
    <string name="CustomDialogBtnText">自定义对话框</string>
    <string name="ProgressDialogBtnText">进度条对话框</string>
    <string name="PopupwindowDialogBtnText">PopupWindow对话框</string>
    <string name="DialogActivityText">对话框测试</string>
    <string name="UserNameTvText">用户名:</string>
    <string name="PasswordTvText">密码:</string>
    <string name="UserNameEtText">请输入用户名</string>
    <string name="PasswordEtText">请输入密码</string>
    <string name="DateDialogBtnText">日期对话框</string>
    <string name="UninstallTvText">卸载</string>
    <string name="StartTvText">启动</string>
    <string name="ShareTvText">分享</string>
    <string name="CancelBtnText">取消</string>
    <string name="CameraBtnText">拍照</string>
    <string name="GalleryBtnText">图库</string>
    <string name="ButtonDialogBtnText">底部对话框</string>

</resources>
