<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AAAAAAAA" >

    <LinearLayout
        android:id="@+id/ll_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="#0FFF"
        android:orientation="vertical" >

        <Button
            android:id="@+id/bt_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_top"
            android:text="@string/GalleryBtnText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#AAAAAA" />

        <Button
            android:id="@+id/bt_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_corner_buttom"
            android:text="@string/CameraBtnText" />

        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner"
            android:text="@string/CancelBtnText" />
    </LinearLayout>

</RelativeLayout>